--- a/services/api/package.json
+++ b/services/api/package.json
@@ -8,6 +8,7 @@
     "build": "keystone build"
   },
   "dependencies": {
+    "@k6-contrib/list-plugins": "^6.1.0",
     "@keystone-6/auth": "^8.0.0",
     "@keystone-6/core": "^6.0.0",
     "@keystone-6/fields-document": "^9.0.0",
