--- a/services/api/package.json
+++ b/services/api/package.json
@@ -26,7 +26,7 @@
     "@keystone-6/core": "^6.3.0",
     "@keystone-6/fields-document": "^9.0.0",
     "@paralleldrive/cuid2": "^2.2.2",
-    "@prisma/client": "^5.20.0",
+    "@prisma/client": "^5.21.0",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
@@ -51,7 +51,7 @@
     "graphql-ws": "^5.16.0",
     "lucide-react": "^0.446.0",
     "moment": "^2.30.1",
-    "prisma": "5.19.1",
+    "prisma": "^5.21.0",
     "quill": "^2.0.2",
     "react-color": "^2.19.3",
     "react-icons": "^5.3.0",
