--- a/services/api/package.json
+++ b/services/api/package.json
@@ -10,9 +10,10 @@
   "dependencies": {
     "@k6-contrib/list-plugins": "^6.1.0",
     "@keystone-6/auth": "^8.0.0",
-    "@keystone-6/core": "^6.0.0",
-    "@keystone-6/fields-document": "^9.0.0",
+    "@keystone-6/core": "^6.3.0",
+    "@keystone-6/fields-document": "^9.1.0",
     "dotenv": "^16.4.5",
+    "razorpay": "^2.9.4",
     "typescript": "^5.5.0"
   }
 }
