--- a/services/api/package.json
+++ b/services/api/package.json
@@ -53,6 +53,7 @@
     "moment": "^2.30.1",
     "prisma": "^5.21.0",
     "quill": "^2.0.2",
+    "razorpay": "^2.9.4",
     "react-color": "^2.19.3",
     "react-icons": "^5.3.0",
     "react-quill-new": "^3.3.3",
