--- a/services/api/package.json
+++ b/services/api/package.json
@@ -51,6 +51,7 @@
     "graphql-ws": "^5.16.0",
     "lucide-react": "^0.446.0",
     "moment": "^2.30.1",
+    "nodemailer": "^6.9.15",
     "prisma": "^5.21.0",
     "quill": "^2.0.2",
     "razorpay": "^2.9.4",
@@ -71,6 +72,7 @@
     "@graphql-codegen/cli": "^5.0.2",
     "@parcel/watcher": "^2.4.1",
     "@types/bcryptjs": "^2",
+    "@types/nodemailer": "^6",
     "@types/react-color": "^2",
     "@types/reactcss": "^1",
     "@types/ws": "^8",
